--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ custom-config.yaml
 .pytest_cache/
 
 # Ignore packaged charts
-*.tgz
+charts/illumidesk/charts/*.tgz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
