resolved error in alb_ingress resource

--- a/charts/illumidesk/templates/alb_ingress.yaml
+++ b/charts/illumidesk/templates/alb_ingress.yaml
@@ -15,6 +15,7 @@ spec:
   rules:
   - host: {{ .Values.albIngress.host }}
     http:
+      paths:
       - path: /*
         backend:
           serviceName: proxy-public
