refactor: Added generic oauthenticator to values.yaml (#87)

--- a/charts/illumidesk/templates/alb_ingress.yaml
+++ b/charts/illumidesk/templates/alb_ingress.yaml
@@ -18,6 +18,10 @@ spec:
       paths:
       - path: /*
         backend:
+          serviceName: ssl-redirect
+          servicePort: use-annotation
+      - path: /*
+        backend:
           serviceName: proxy-public
           servicePort: 80
 {{ end }}
