feat: Adds option to authenticate to docker registry (#105)

--- a/charts/illumidesk/values.yaml
+++ b/charts/illumidesk/values.yaml
@@ -15,6 +15,14 @@ rbac:
   # Enables or disables
   enabled: true
 
+## Creates Service account for the image registry  for authentication
+##
+imageCredentials:
+  enabled: false
+  registry: https://index.docker.io/v1/
+  username: illumideskops
+  email: hello@illumidesk.com
+
 ## JupyterHub configuration
 ## ref: https://github.com/jupyterhub/zero-to-jupyterhub-k8s/blob/master/jupyterhub/values.yaml
 ##
@@ -179,7 +187,7 @@ jupyterhub:
       # The JupyterHub image tag
       tag: "latest"
       # Whether or not to always pull the image from the registry.
-      pullPolicy: Always
+      pullPolicy: IfNotPresent
     # Shuts down the end-user server (pod) when the user logs out.
     shutdownOnLogout: true
   # Settings for the JupyterHub proxy service. The proxy service is used to route users to their
@@ -224,7 +232,7 @@ jupyterhub:
       tag: latest
       # Specify whether or not to alwasy pull the singleuser image. This is useful for when the singleuser
       # image is updated using the same image tag, for example, the latest alias.
-      pullPolicy: Always
+      pullPolicy: IfNotPresent
 
 ## Postgres setup
 ## ref: https://github.com/bitnami/charts/tree/master/bitnami/postgresql
