docs: Kind setup docs for local testing (#116)

--- a/charts/illumidesk/templates/grader_pv.yaml
+++ b/charts/illumidesk/templates/grader_pv.yaml
@@ -3,16 +3,33 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: grader-pv-{{ .Release.Name }}
+{{ if eq .Values.allowNFS.type "local" }}
+  labels:
+    type: local
+{{ end }}
 spec:
   capacity:
     storage: 20Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
+  persistentVolumeReclaimPolicy: Delete
+{{ if eq .Values.allowNFS.type "local" }}
+  storageClassName: local-storage
+  local:
+    path: "/illumidesk-courses"
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - illumidesk-oregon-control-plane
+{{ else if  eq .Values.allowNFS.type "efs" }}
   storageClassName: ""
   nfs:
     server: {{ .Values.allowNFS.server }}
     path: {{ .Values.allowNFS.path }}
-
+{{ end }}
 {{ end }}
